# TEST-IOT

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/SorftTimer/: CMakeLists.txt  SorftTimer.c  SorftTimer.h
components/TaskESP/: CMakeLists.txt  gpio_task.c  initiate_task.c  nvs_task.c  task_esp.h
components/button/: CMakeLists.txt  button.c
components/file_server/: CMakeLists.txt  file_server.c
components/i2c/: CMakeLists.txt  i2cdev.h  stm32f1i2c.c  stm32f1i2c.h
components/modbus/: CMakeLists.txt  master.c  master.h
components/output_iot/: CMakeLists.txt  output_iot.h
components/spi/: CMakeLists.txt  SDCard.h
components/uart/: stm32f1uart.c  stm32f1uart.h
components/wifi_mqtt/: CMakeLists.txt  wifi_mqtt.c  wifi_mqtt.h
data_test/: C230422.CSV  C230422.TXT  S230422.CSV  S230422.TXT  S240422.CSV  S240522.CSV
include/button/: CMakeLists.txt  button.c  button.h
include/ds1307/: CMakeLists.txt  ds3231.h
include/i2c/: CMakeLists.txt  i2cdev.c  stm32f1.c  stm32f1.h
include/output_iot/: output_iot.c
include/spi/: SDCard.c  SDCard.h
include/uart/: CMakeLists.txt  stm32f1uart.c  stm32f1uart.h
include/wifi/: CMakeLists.txt  wifi_connect.c  wifi_connect.h
main/: CMakeLists.txt  Kconfig.projbuild  RTC.c  RTC.h  SDCard.c  main.c  main.h  modbus_config.h  mqtt_connect.c  mqtt_connect.h  wifi_connect.c  wifi_connect.h
